--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@material-tailwind/react": "^2.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image": "^4.1.0",
     "react-router": "^7.0.1"
   },
   "devDependencies": {
